# LIP3D

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  algo.tex  customViewer3D.cpp  customViewer3D.h  geometry_utils.h  hyper.tex  image_profiles.h  viewerSimple.cpp
script/: .qglviewer.xml  imProfile  info  lip_sign.py  make_custom_feature_file.py  orientability.csv  orientability.py  orientability_stats.csv  orientability_tables.tex  process_lip.sh  process_meshes.sh  process_orientability.sh  table.tex  test_randomForest.py  toilet_0354_m_features.csv  train_randomForest.py  train_randomForest2.py  visu_feature.py
